plugins {
    id 'com.android.application'
}

android {
  packagingOptions {
    pickFirst 'META-INF/*'
  }
  namespace 'com.faraz.dictionary'
    compileSdk 34

    defaultConfig {
        applicationId "com.faraz.dictionary"
        minSdk 24
        //noinspection OldTargetApi
        targetSdk 33
        versionCode 1
        versionName "2.0"

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        coreLibraryDesugaringEnabled true
        sourceCompatibility JavaVersion.VERSION_17
        targetCompatibility JavaVersion.VERSION_17
    }
}

dependencies {
    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.1.5'
    //noinspection GradleDependency
    implementation 'androidx.appcompat:appcompat:1.4.1'
    //noinspection GradleDependency
    implementation 'com.google.android.material:material:1.5.0'
    //noinspection GradleDependency
    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
    //noinspection GradleDependency
    implementation 'com.android.volley:volley:1.2.0'
    implementation 'com.github.wnameless.json:json-flattener:0.16.4'
    implementation 'com.mailjet:mailjet-client:5.2.5'
    implementation 'com.sun.mail:android-mail:1.6.7'
    implementation 'com.google.guava:guava:32.1.3-android'
    implementation 'com.github.caseyscarborough:pastebin-api-java:0.1.3'
    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.18.1'
    implementation 'javax.xml.stream:stax-api:1.0-2'
}